--- a/C_Square.vcxproj
+++ b/C_Square.vcxproj
@@ -417,10 +417,10 @@
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="bin\data\MandelbrotSet\shadersGL2\mandelbrot.frag" />
-    <None Include="bin\data\MandelbrotSet\shadersGL2\mandelbrot.vert" />
-    <None Include="bin\data\MandelbrotSet\shadersGL3\mandelbrot.frag" />
-    <None Include="bin\data\MandelbrotSet\shadersGL3\mandelbrot.vert" />
+    <None Include="shaderSrc\MandelbrotSet\shadersGL2\mandelbrot.frag" />
+    <None Include="shaderSrc\MandelbrotSet\shadersGL2\mandelbrot.vert" />
+    <None Include="shaderSrc\MandelbrotSet\shadersGL3\mandelbrot.frag" />
+    <None Include="shaderSrc\MandelbrotSet\shadersGL3\mandelbrot.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ProjectExtensions>
