--- a/C_Square.vcxproj.filters
+++ b/C_Square.vcxproj.filters
@@ -316,6 +316,9 @@
     <ClCompile Include="src\draw\DJuliaSet.cpp">
       <Filter>src\drawer\DElement</Filter>
     </ClCompile>
+    <ClCompile Include="src\draw\DTexturePrimitive.cpp">
+      <Filter>src\drawer\DElement</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
@@ -813,6 +816,9 @@
       <Filter>src\drawer\DElement</Filter>
     </ClInclude>
     <ClInclude Include="src\draw\DJuliaSet.h">
+      <Filter>src\drawer\DElement</Filter>
+    </ClInclude>
+    <ClInclude Include="src\draw\DTexturePrimitive.h">
       <Filter>src\drawer\DElement</Filter>
     </ClInclude>
   </ItemGroup>
