--- a/C_Square.vcxproj.filters
+++ b/C_Square.vcxproj.filters
@@ -322,6 +322,9 @@
     <ClCompile Include="src\draw\DAudioMesh.cpp">
       <Filter>src\drawer\DElement</Filter>
     </ClCompile>
+    <ClCompile Include="src\draw\DMoveRect.cpp">
+      <Filter>src\drawer\DElement</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
@@ -825,6 +828,9 @@
       <Filter>src\drawer\DElement</Filter>
     </ClInclude>
     <ClInclude Include="src\draw\DAudioMesh.h">
+      <Filter>src\drawer\DElement</Filter>
+    </ClInclude>
+    <ClInclude Include="src\draw\DMoveRect.h">
       <Filter>src\drawer\DElement</Filter>
     </ClInclude>
   </ItemGroup>
