+add ctrlMap /modify squareMgr  to config data

--- a/C_Square.vcxproj
+++ b/C_Square.vcxproj
@@ -199,6 +199,7 @@
     <ClCompile Include="..\..\..\addons\ofxPostProcessing\src\ZoomBlurPass.cpp" />
     <ClCompile Include="src\camCtrl.cpp" />
     <ClCompile Include="src\camUnit.cpp" />
+    <ClCompile Include="src\ctrlMap.cpp" />
     <ClCompile Include="src\draw\DAudioMesh.cpp" />
     <ClCompile Include="src\draw\DCircleLine.cpp" />
     <ClCompile Include="src\draw\DCylinderFlow.cpp" />
@@ -314,6 +315,7 @@
     <ClInclude Include="..\..\..\addons\ofxPostProcessing\src\ZoomBlurPass.h" />
     <ClInclude Include="src\camCtrl.h" />
     <ClInclude Include="src\camUnit.h" />
+    <ClInclude Include="src\ctrlMap.h" />
     <ClInclude Include="src\draw\DAudioMesh.h" />
     <ClInclude Include="src\draw\DCircleLine.h" />
     <ClInclude Include="src\draw\DECA.h" />
@@ -417,6 +419,7 @@
     <ClInclude Include="src\STest.h" />
     <ClInclude Include="src\SType.h" />
     <ClInclude Include="src\videoMgr.h" />
+    <ClInclude Include="src\view.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="$(OF_ROOT)\libs\openFrameworksCompiled\project\vs\openframeworksLib.vcxproj">
