+add scence file

--- a/C_Square.vcxproj
+++ b/C_Square.vcxproj
@@ -280,6 +280,17 @@
     <ClCompile Include="src\ofViewApp.cpp" />
     <ClCompile Include="src\ofxKMarchingCubes\ofxKMarchingCubes.cpp" />
     <ClCompile Include="src\postFilter.cpp" />
+    <ClCompile Include="src\scence\S01.cpp" />
+    <ClCompile Include="src\scence\S02.cpp" />
+    <ClCompile Include="src\scence\S03.cpp" />
+    <ClCompile Include="src\scence\S04.cpp" />
+    <ClCompile Include="src\scence\S05.cpp" />
+    <ClCompile Include="src\scence\S06.cpp" />
+    <ClCompile Include="src\scence\S07.cpp" />
+    <ClCompile Include="src\scence\S08.cpp" />
+    <ClCompile Include="src\scence\S09.cpp" />
+    <ClCompile Include="src\scence\S10.cpp" />
+    <ClCompile Include="src\scence\S11.cpp" />
     <ClCompile Include="src\scence\STest.cpp" />
     <ClCompile Include="src\squareMgr.cpp" />
     <ClCompile Include="src\squareUnit.cpp" />
@@ -412,10 +423,24 @@
     <ClInclude Include="..\..\..\addons\ofxXmlSettings\src\ofxXmlSettings.h" />
     <ClInclude Include="..\..\..\addons\ofxXmlSettings\libs\tinyxml.h" />
     <ClInclude Include="src\ofViewApp.h" />
+    <ClInclude Include="src\scence\S01.h" />
+    <ClInclude Include="src\scence\S02.h" />
+    <ClInclude Include="src\scence\S03.h" />
+    <ClInclude Include="src\scence\S04.h" />
+    <ClInclude Include="src\scence\S05.h" />
+    <ClInclude Include="src\scence\S06.h" />
+    <ClInclude Include="src\scence\S07.h" />
+    <ClInclude Include="src\scence\S08.h" />
+    <ClInclude Include="src\scence\S09.h" />
+    <ClInclude Include="src\scence\S10.h" />
+    <ClInclude Include="src\scence\S11.h" />
     <ClInclude Include="src\scence\SBase.h" />
     <ClInclude Include="src\scence\scence.h" />
     <ClInclude Include="src\scence\STest.h" />
     <ClInclude Include="src\scence\SType.h" />
+    <ClInclude Include="src\scence\VS01_1.h" />
+    <ClInclude Include="src\scence\VS01_2.h" />
+    <ClInclude Include="src\scence\VS04_1.h" />
     <ClInclude Include="src\squareMgr.h" />
     <ClInclude Include="src\squareUnit.h" />
     <ClInclude Include="src\videoMgr.h" />
